# pyb-embedded

./: .codedocs  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  build.sh  codecov.yml  notes.md  readme.md  sonar-project.properties
cmake/: GCC.cmake  GNU-ARM-Toolchain.cmake
docs/: CMakeLists.txt  compiler and linker flags.md  directory_structure.md  hardware and tools.md  main_page.md  modbus.md  used_mcu_resources.md  variables_and_targets.md
inc/: BoardButton.hpp  BoardLEDs.hpp  Button.hpp  DigitalIn.hpp  DigitalOut.hpp  GPIO.hpp
libs/: CMakeLists.txt
libs/SEGGER/: CMakeLists.txt
libs/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c
libs/ST/: CMakeLists.txt
libs/ST/hal/: CMakeLists.txt
libs/ST/hal/inc/: stm32f4xx_hal_conf.h  stm32f4xx_ll_gpio.h
libs/ST/hal/src/: stm32f4xx_ll_gpio.c
libs/ST/system/: CMakeLists.txt
linker/: stm32f405.ld
src/: BoardButton.cpp  BoardLEDs.cpp  Button.cpp  CMakeLists.txt  DigitalIn.cpp  DigitalOut.cpp  main.c  main.cpp  modbus.py  pys.py
src/hal/: DigitalInBase.hpp  DigitalOutBase.hpp  GPIOBase.cpp  GPIOBase.hpp  Pin.hpp  USART.hpp  UsartDriverBase.hpp
src/hal/desktop/: DigitalIn.cpp  DigitalIn.hpp  DigitalOut.cpp  DigitalOut.hpp  GPIO.cpp  GPIO.hpp  GPIOState.cpp  Pin.hpp  USART_Driver.cpp  USART_Driver.hpp  UsartDriver.hpp
src/modbus/: ModbusExceptions.hpp  ModbusRegisters.hpp  ModbusRequest.cpp  ModbusRequest.hpp  ModbusSlave.cpp  ModbusSlave.hpp  ModbusSlaveCom.cpp  ModbusSlaveCom.hpp  mb_slave.cpp  mb_slave.hpp  registers.hpp
src/utilities/: BoardButton.cpp  BoardButton.hpp  BoardLEDs.cpp  BoardLEDs.hpp  Button.cpp  Button.hpp
tests/: ButtonTest.cpp  CMakeLists.txt  ModbusTests.cpp
